# codecrafters-bittorrent-cpp

./: .clang-format  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: CodeFormatting.cmake
src/: BTConnection.cpp  BTConnection.h  BitTorrentMessage.cpp  BitTorrentMessage.h  Boost.h  FileManager.cpp  FileManager.h  FileReader.h  HttpClient.cpp  HttpClient.h  IFileReader.h  IHttpClient.h  ITrackerService.h  IntervalMap.h  Main.cpp  TrackerService.cpp  TrackerService.h  old_utils.cpp  old_utils.h  utils.cpp  utils.h
src/lib/: HTTPRequest.hpp
tests/: CMakeLists.txt  bittorent_unit_test.cpp  test.cpp
